// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations - Positive Tests add a post 1`] = `
Object {
  "data": Object {
    "addPost": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'postModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Positive Tests like a post 1`] = `
Object {
  "data": Object {
    "likePost": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'postModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations - Positive Tests update my info 1`] = `
Object {
  "data": Object {
    "updateMyInfo": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'userModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
